--- a/pages/managerCustomerData_new/managerCustomerData_new.wxss
+++ b/pages/managerCustomerData_new/managerCustomerData_new.wxss
@@ -4,9 +4,16 @@
   background-color: #fff;
 }
 .page-tab{
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
+  width: 100%;
+  height: 90rpx;
+  overflow: hidden;
+  background-color: #fff;
   border-bottom:6rpx solid #eee;
+  z-index: 100;
 }
 .page-tab .tab-item{
   width: 50%;
@@ -30,11 +37,49 @@
   transition: transform 0.3s;
   transition: transform 0.3s, -webkit-transform 0.3s;
 }
-.my-customer .list{
+.btn-group{
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 30rpx;
+  padding: 20rpx 0;
+  background-color: #fff;
+}
+.btn-group .btn{
+  width: 30%;
+  font-size: 30rpx;
+  padding: 6rpx;
+  border-radius: 10rpx;
+  text-align: center;
+  color: #fff;
+}
+.btn-cancel{
+  margin-right: 20rpx;
+  background-color: #acacac;
+}
+.btn-confirm{
+  background-color: #eb495e;
+}
+.page-content{
+  height: 100%;
+  padding-top: 84rpx;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+.section{
+  padding-top: 100rpx;
+}
+.list{
   display: flex;
   align-items: center;
   padding: 20rpx 30rpx;
   border-bottom: 1px solid #eee;
+}
+.list .select{
+  width: 46rpx;
+  height: 46rpx;
+  margin-right: 20rpx;
 }
 .user-image{
   width:90rpx;
@@ -49,9 +94,6 @@
   font-size: 28rpx;
   color: #666;
 }
-.main-content .time{
-
-}
 .main-content .time-image{
   display: inline-block;
   width: 20rpx;
@@ -63,13 +105,29 @@
   font-size: 24rpx;
   color: #666;
 }
+.main-content__catlog{
+  display: flex;
+  align-items: center;
+  padding:6rpx 0;
+}
+.main-content__catlog .catlog{
+  display: flex;
+  font-size: 22rpx;
+  color: #666;
+}
+.main-content__catlog .catlog:first-child{
+  margin-right: 50rpx;
+}
+.main-content__catlog .content{
+  color: #fe6771;
+}
 .tel-icon{
   margin-top: 6rpx;
 }
 .tel-icon image{
   width: 50rpx;
 }
-.search-content{
+.shop-customer__wrapper{
   position: fixed;
   width: 100%;
   box-sizing: border-box;
@@ -77,7 +135,8 @@
 .search-content .top{
   display: flex;
   align-items: center;
-  padding: 10rpx 0 10rpx 20rpx;
+  padding: 20rpx;
+  border-bottom: 1px solid #eee;
 }
 .backend{
   background-color: #eee;
@@ -133,9 +192,6 @@
   width: 100%;
   font-size: 28rpx;
 }
-.search-input__box .search_input input{
-  
-}
 .top .search-input .search-btn{
   font-size: 28rpx;
   color: #acacac;
@@ -189,4 +245,94 @@
 }
 .add_content .new-item .new-item__text{
   width: 60rpx;
+}
+/* 遮罩层 */
+.mask{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(15,15,26,0.7);
+  z-index: 999;
+}
+.mask-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80rpx;
+  font-size: 28rpx;
+  color: #6a6a6a;
+  background-color: #fff;
+  border: 1px solid #eee;
+}
+.mask-content{
+  height: 500rpx;
+  font-size: 28rpx;
+}
+.mask-content, .mask-footer{
+  background-color: #fff;
+}
+.mask-content__title{
+  position: relative;
+  height: 50rpx;
+  line-height: 50rpx;
+  padding-left: 30rpx;
+  font-weight: 400;
+  background-color: #fbfbfb;
+}
+.mask-content__title::before{
+  position: absolute;
+  top: 15rpx;
+  left: 0;
+  display: block;
+  content: '';
+  width: 4rpx;
+  height: 20rpx;
+  background-color: #ffd161;
+}
+.mask-content__item{
+  height: 80rpx;
+  line-height: 80rpx;
+  margin-left: 30rpx;
+  border-bottom: 1px solid #ececec;
+}
+.mask-content__item.selected{
+  color: #ffe6b4;
+}
+.mask-content__item .icon{
+  margin-right: 4rpx;
+  padding: 0 4rpx;
+  color: #fff;
+}
+.mask-footer{
+  display: flex;
+  height: 90rpx;
+  line-height: 90rpx;
+}
+.mask-footer .clear{
+  flex: 1;
+  font-size: 25rpx;
+  padding-left: 30rpx;
+}
+.mask-footer .confirm{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 210rpx;
+  font-size: 35rpx;
+  background-color: #ffd161;
+}
+.mask-footer .confirm .confirm-number{
+  margin-left: 15rpx;
+  width: 30rpx;
+  height: 30rpx;
+  line-height: 30rpx;
+  text-align: center;
+  border-radius: 50%;
+  color: #ffd161;
+  background-color: #000;
+  font-size: 25rpx
 }
