--- a/pages/userCenter/userCenter.wxss
+++ b/pages/userCenter/userCenter.wxss
@@ -1,1 +1,114 @@
-/* pages/userCenter/userCenter.wxss */
+.user-info{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 228rpx;
+  padding: 20rpx 40rpx;
+  background: url(http://www.hzmvip.com/images/userCenter/head_bg.png) no-repeat center top;
+  background-size: 100% 100%;
+}
+.user-info .avatar{
+  width: 128rpx;
+  height: 128rpx;
+}
+.user-info .contact{
+  /* width: 75%; */
+  position: relative;
+  flex: 1;
+  margin-left: 20rpx;
+}
+.user-info .contact .info{
+  height: 40rpx;
+  line-height: 40rpx;
+  font-size: 24rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.user-info .contact .info:first-child{
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 30rpx;
+}
+.user-info .contact::after{
+  position: absolute;
+  top: 20rpx;
+  right: 80rpx;
+  content: '';
+  width: 20rpx;
+  height: 20rpx;
+  border: 1px solid #acacac;
+  border-bottom: 0; 
+  border-left: none;
+  transform: rotate(45deg);  
+}
+.deadline{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20rpx;
+  border-bottom: 15rpx solid #eee;
+}
+.deadline .text{
+  font-size: 30rpx;
+  color: #666;
+}
+.deadline .perchase{
+  padding: 6rpx 16rpx;
+  font-size: 26rpx;
+  border-radius: 10rpx;
+  color: #fff;
+  background-color: #ff5997;
+}
+.my-info{
+  display: flex;
+  border-bottom: 15rpx solid #eee;
+}
+.my-info .info{
+  width: 33.33%;
+  padding: 20rpx 0;
+  text-align: center;
+  font-size: 24rpx;
+}
+.my-info .info .number .b{
+  margin-right: 6rpx;
+  font-weight: 700;
+  font-size: 48rpx;
+}
+.my-info .info:not(:last-child){
+  border-right: 1px solid #eee;
+}
+.my-info .info:nth-child(1) .number{
+  color: #fe6671;
+}
+.my-info .info:nth-child(2) .number{
+  color: #e074fc;
+}
+.my-info .info:nth-child(3) .number{
+  color: #ffae00;
+}
+.item-list .item{
+  display: flex;
+  align-items: center;
+  padding: 25rpx 30rpx;
+  border-bottom: 1px solid #eee;
+}
+.item-list .item .item-image{
+  width: 40rpx;
+  height: 40rpx;
+  margin-right: 20rpx;
+}
+.item-list .item .item-text{
+  flex: 1;
+  color: #666;
+  font-size: 28rpx;
+}
+.item-list .item .item-total{
+  margin-right: 20rpx;
+  font-size: 24rpx;
+  color: #9d9d9d;
+}
+.item-list .item .item-detail{
+  width: 16rpx;
+  height: 22rpx;
+}
