--- a/pages/addRecords/addRecords.wxss
+++ b/pages/addRecords/addRecords.wxss
@@ -1,1 +1,72 @@
-/* pages/addRecords/addRecords.wxss */
+page{
+  background-color: #eee;
+}
+.head{
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 20rpx;
+  background-color: #fff;
+}
+.head .avatar{
+  width: 88rpx;
+  height: 88rpx;
+  margin-right: 28rpx;
+  border-radius: 50%;
+}
+.head::after, .multiPicker::after{
+  position: absolute;
+  top: 40%;
+  right: 20rpx;
+  display: block;
+  content: '';
+  width: 20rpx;
+  height: 20rpx;
+  border-style: solid;
+  border-color: #737373;
+  border-width: 1px 1px 0 0;
+  transform: rotate(45deg);
+}
+.head .content .time{
+  display: flex;
+  align-items: center;
+  margin-top: 10rpx;
+  font-size: 24rpx;
+  color: #999;
+}
+.head .content .time image{
+  width: 30rpx;
+  height: 30rpx;
+  margin-right: 20rpx;
+}
+.multiPicker{
+  position: relative;
+  padding: 20rpx;
+  font-size: 36rpx;
+  color: #333;
+}
+.work{
+  width: 100%;
+  height: 200rpx;
+  padding: 20rpx;
+  color: #999;
+  background-color: #fff;
+  box-sizing: border-box;
+  font-size: 26rpx;
+}
+.save{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 30rpx;
+  background-color: #fff;
+}
+.save .btn{
+  padding: 20rpx 0;
+  text-align: center;
+  font-size: 36rpx;
+  color: #fff;
+  background-color: #fb4791;
+  border-radius: 10rpx;
+}
