--- a/pages/customerCenter/customerCenter.wxml
+++ b/pages/customerCenter/customerCenter.wxml
@@ -1,7 +1,7 @@
 <view class="section">
   <view class="my-info">
     <view class="info">
-      <navigator hover-class='none' url='../userPoints/userPoints'>
+      <navigator hover-class='none' url='../myCoupon/myCoupon'>
         <view class="number">
           <text class="b">1</text>张
         </view>
@@ -9,7 +9,7 @@
       </navigator>
     </view>
     <view class="info">
-      <navigator hover-class='none' url='../userWallet/userWallet'>
+      <navigator hover-class='none' url='../myPackage/myPackage'>
         <view class="number">
           <text class="b">4</text>个
         </view>
@@ -17,7 +17,7 @@
       </navigator>
     </view>
     <view class="info">
-      <navigator hover-class='none' url='../userComment/userComment'>
+      <navigator hover-class='none' url='../myPoints/myPoints'>
         <view class="number">
           <text class="b">69</text>分
         </view>
@@ -32,28 +32,28 @@
       <image class="item-detail" src="http://www.hzmvip.com/images/workDiary/heifan.png"></image>
     </navigator>
     <navigator class="item" hover-class='none' url='../customerOrder/customerOrder'>
-      <image class="item-image" src="http://www.hzmvip.com/images/userCenter/myFamily.png" mode='widthFix'></image>
+      <image class="item-image" src="http://www.hzmvip.com/images/customerCenter/order.png" mode='widthFix'></image>
       <view class="item-text">订单</view>
       <view class="item-total">200个</view>
       <image class="item-detail" src="http://www.hzmvip.com/images/workDiary/heifan.png"></image>
     </navigator>
     <navigator class="item" hover-class='none' url='../addressSelection/addressSelection'>
-      <image class="item-image" src="http://www.hzmvip.com/images/userCenter/itemList.png" mode='widthFix'></image>
+      <image class="item-image" src="http://www.hzmvip.com/images/customerCenter/place.png" mode='widthFix'></image>
       <view class="item-text">地址</view>
       <image class="item-detail" src="http://www.hzmvip.com/images/workDiary/heifan.png"></image>
     </navigator>
     <navigator class="item" hover-class='none' url='../cards_project/cards_project'>
-      <image class="item-image" src="http://www.hzmvip.com/images/userCenter/shopInfo.png" mode='widthFix'></image>
+      <image class="item-image" src="http://www.hzmvip.com/images/customerCenter/card.png" mode='widthFix'></image>
       <view class="item-text">卡项</view>
       <image class="item-detail" src="http://www.hzmvip.com/images/workDiary/heifan.png"></image>
     </navigator>
     <navigator class="item" hover-class='none' url='../myFans/myFans'>
-      <image class="item-image" src="http://www.hzmvip.com/images/userCenter/set.png" mode='widthFix'></image>
+      <image class="item-image" src="http://www.hzmvip.com/images/customerCenter/fans.png" mode='widthFix'></image>
       <view class="item-text">粉丝</view>
       <image class="item-detail" src="http://www.hzmvip.com/images/workDiary/heifan.png"></image>
     </navigator>
     <navigator class="item" hover-class='none' url='../debt/debt'>
-      <image class="item-image" src="http://www.hzmvip.com/images/userCenter/set.png" mode='widthFix'></image>
+      <image class="item-image" src="http://www.hzmvip.com/images/customerCenter/debt.png" mode='widthFix'></image>
       <view class="item-text">欠款</view>
       <image class="item-detail" src="http://www.hzmvip.com/images/workDiary/heifan.png"></image>
     </navigator>
@@ -80,6 +80,18 @@
         </view>
         <view class="status">期数：铺垫期</view>
       </navigator>
+    </view>
+  </view>
+  <view class="footer">
+    <view class="btn" bindtap='showCustomerManagement'>顾客管理</view>
+  </view>
+  <view class="shade {{shade?'':'active'}}" bindtap='hideShade'>
+    <view class="items">
+      <navigator hover-class='none' url='../myPackage/myPackage' class="shade_item">划扣卡项</navigator>
+      <navigator hover-class='none' url='../addService/addService' class="shade_item">新增服务</navigator>
+      <navigator hover-class='none' url='../addProduct/addProduct' class="shade_item">新增产品</navigator>
+      <navigator hover-class='none' url='../addCombo/addCombo' class="shade_item">新增套盒</navigator>
+      <view class="cancel">取消</view>
     </view>
   </view>
 </view>
