--- a/pages/setCustomerData/setCustomerData.wxml
+++ b/pages/setCustomerData/setCustomerData.wxml
@@ -1,2 +1,105 @@
 <!--pages/setCustomerData/setCustomerData.wxml-->
-<text>pages/setCustomerData/setCustomerData.wxml</text>
+<view class="section">
+  <view class="import">
+    <image src="http://www.hzmvip.com/images/tongxunlu.png" mode="widthFix"></image>
+    <view class="text">通讯录导入</view>
+  </view>
+  <view class="title">个人信息</view>
+  <form class="form">
+    <view class="form-group">
+      <view class="label">姓名<view class="required">*</view></view>
+      <input placeholder='请输入姓名' placeholder-class='input_content'></input>
+    </view>
+    <view class="form-group">
+      <view class="label">手机<view class="required">*</view></view>
+      <input placeholder='请输入手机号' placeholder-class='input_content'></input>
+    </view>
+    <view class="form-group">
+      <view class="label">性别</view>
+      <radio-group class="radio-group" bindchange="radioChange">
+        <label class="radio" wx:for="{{items}}" wx:key="{{index}}">
+          <radio color="#FB6197" value="{{item.name}}" checked="{{item.checked}}" />{{item.value}}
+        </label>
+      </radio-group>
+    </view>
+    <view class="form-group toggle">
+      <view class="label">生日</view>
+      <picker mode="date" value="{{date}}" start="1950-01-01" end="2030-12-31" bindchange='bindDateChange'>
+        <view class="picker">{{date}}</view>
+      </picker>
+    </view>
+    <view class="form-group toggle">
+      <view class="label">星座</view>
+      <picker bindchange='bindPickerChange' value="{{indexXZ}}" range="{{xingzuo}}">
+        <view class="picker">{{xingzuo[indexXZ]}}</view>
+      </picker>
+    </view>
+    <view class="form-group">
+      <view class="label">身高(cm)</view>
+      <input placeholder='请输入身高' placeholder-class='input_content'></input>
+    </view>
+    <view class="form-group">
+      <view class="label">体重(kg)</view>
+      <input placeholder='请输入体重' placeholder-class='input_content'></input>
+    </view>
+    <view class="form-group toggle">
+      <view class="label">类型</view>
+      <picker bindchange='bindChangeType' value="{{index1}}" range="{{array1}}">
+        <view class="picker">{{array1[index1]}}</view>
+      </picker>
+    </view>
+    <view class="form-group toggle">
+      <view class="label">血型</view>
+      <picker bindchange='bindChangeBlood' value="{{index2}}" range="{{array2}}">
+        <view class="picker">{{array2[index2]}}</view>
+      </picker>
+    </view>
+    <view class="form-group toggle">
+      <view class="label">婚姻</view>
+       <picker bindchange='bindChangeMarry' value="{{index3}}" range="{{array3}}">
+        <view class="picker">{{array3[index3]}}</view>
+      </picker>
+    </view>
+    <view class="form-group toggle">
+      <view class="label">婚姻纪念日</view>
+      <picker mode="date" value="{{marryDate}}" start="1950-01-01" end="2030-12-31" bindchange='bindChangeMarryDate'>
+        <view class="picker">{{marryDate}}</view>
+      </picker>
+    </view>
+    <view class="form-group choose" bindtap='toggleItemList1'>
+      <view class="label">身体信息</view>
+      <image class="choose-icon" src='http://www.hzmvip.com/images/itemList.png' mode='widthFix'></image>
+    </view>
+    <view class="choose-items" hidden='{{itemListShow1}}'>
+      <view class="item" wx:for="{{itemList1}}" wx:key="{{index}}">
+        <view class="item-text">{{item.title}}</view>
+        <radio-group class="radio-group" bindchange="radioChange1">
+          <label class="radio" wx:for="{{items1}}" wx:key="{{index}}">
+            <radio color="#FB6197" value="{{item.name}}" checked="{{item.checked}}">{{item.value}}</radio>
+          </label>
+        </radio-group>
+      </view>
+    </view>
+    <view class="form-group choose" bindtap='toggleItemList2'>
+      <view class="label">面部信息</view>
+      <image class="choose-icon" src='http://www.hzmvip.com/images/itemList.png' mode='widthFix'></image>
+    </view>
+    <view class="choose-items" hidden='{{itemListShow2}}'>
+      <view class="item" wx:for="{{itemList2}}" wx:key="{{index}}">
+        <view class="item-text">{{item.title}}</view>
+        <radio-group class="radio-group" bindchange="radioChange2">
+          <label class="radio" wx:for="{{items1}}" wx:key="{{index}}">
+            <radio color="#FB6197" value="{{item.name}}" checked="{{item.checked}}">{{item.value}}</radio>
+          </label>
+        </radio-group>
+      </view>
+    </view>
+    <view class='save' bindtap='save'>保 存</view>
+  </form>
+</view>
+<view class="mask" wx:if="{{maskActive}}">
+  <view class="mask-content">
+    <progress percent='100' activeColor='#FB6197' stroke-width='10' active='true' show-info></progress>
+    <view class="loading">正在处理中</view>
+  </view>
+</view>
