--- a/pages/shopArrange/shopArrange.wxss
+++ b/pages/shopArrange/shopArrange.wxss
@@ -1,1 +1,76 @@
 /* pages/shopArrange/shopArrange.wxss */
+.section{
+  padding: 0 0 45rpx;
+}
+.tip{
+  display: flex;
+  align-items: flex-start;
+  padding: 15rpx 70rpx 38rpx 40rpx;
+  border-top: 20rpx solid #eee;
+}
+.tip image{
+  width: 32rpx;
+}
+.tip .tip-text{
+  flex: 1;
+  margin-left: 20rpx;
+  color: #333;
+  font-size: 20rpx;
+}
+.not-choose{
+  margin: 0 42rpx;
+  padding: 22rpx 0;
+  color: #fff;
+  background: #d5d5d5;
+  text-align: center;
+  border-radius: 10rpx;
+  font-size: 26rpx;
+}
+.item{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 36rpx 42rpx;
+  color: #6d6d6d;
+  border-bottom: 1rpx solid #ececec;
+}
+.item .avatar{
+  width: 136rpx;
+  margin-right: 30rpx;
+  border-radius: 50%;
+}
+.list-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 18rpx;
+  border-bottom: 1rpx solid #ececec;
+}
+.list-top__name{
+  font-size: 26rpx;
+  font-weight: 600;
+  color: #333;
+}
+.list-top__number{
+  font-size: 20rpx;
+  color: #999;
+}
+.list-intro{
+  padding: 12rpx 0;
+  font-size: 22rpx;
+  color: #999;
+}
+.list-ratings{
+  display: flex;
+}
+.list-ratings__item{
+  display: flex;
+  align-items: center;
+  margin-right: 10rpx;
+  font-size: 24rpx;
+  color: #999;
+}
+.list-ratings__item image{
+  width: 22rpx;
+  margin-right: 5rpx;
+}
