--- a/pages/debt/debt.wxss
+++ b/pages/debt/debt.wxss
@@ -1,1 +1,80 @@
-/* pages/debt/debt.wxss */
+/* pages/myPoints/myPoints.wxss */
+page{
+  background: #eee;
+}
+.point{
+  padding: 40rpx;
+  font-size: 28rpx;
+  background: #fff;
+}
+.current-point{
+  color: #808080;
+}
+.point-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20rpx 0;
+}
+.point-content .number{
+  color: #69b81c;
+}
+.point-content .number b{
+  font-size: 40rpx;
+}
+.point-content navigator{
+  padding: 16rpx 20rpx;
+  border: 1rpx solid #f0f0f0;
+  border-radius: 10rpx;
+  color: #444;
+}
+.detail{
+  position: relative;
+  margin-top: 60rpx;
+  background: #fff;
+}
+.title{
+  position: absolute;
+  top: -20rpx;
+  left: 38%;
+  padding: 0 30rpx;
+  font-size: 28rpx;
+  color: #999;
+  background: #fff;
+  z-index: 99;
+}
+.detail .item{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30rpx 40rpx;
+  color: #4d4d4d;
+  font-size: 28rpx;
+}
+.detail .item:first-child{
+  border-top: 1rpx solid #ccc;
+}
+.detail .item:not(:last-child){
+  border-bottom: 1rpx solid #eee;
+}
+.item-left__name, .item-left__order{
+  margin-bottom: 20rpx;
+}
+.time{
+  color: #888;
+}
+.item-right__number{
+  font-size: 40rpx;
+  font-weight: 600;
+}
+.item-right__number.green{
+  color: #69b81c;
+}
+.item-right__number.red{
+  color: #f55f5e;
+}
+.item-right__number .remark{
+  font-size: 24rpx;
+  color: #888;
+  text-align: center;
+}
